--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,33 @@
 version: 2.1
+
+orbs:
+  python: circleci/python@0.2.1
+
 jobs:
-  build:
-    docker:
-      - image: alpine:3.7
+  build-and-test:
+    executor: python/default
     steps:
+      - checkout
+      - python/load-cache
+      - python/install-deps
+      - python/save-cache
       - run:
-          name: The First Step
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+          command: ./game/test.py test
+          name: Test
+
+workflows:
+  main:
+    jobs:
+      - build-and-test
+
+#version: 2.1
+#jobs:
+#  build:
+#    docker:
+#      - image: alpine:3.7
+#    steps:
+#     - run:
+ #        name: The First Step
+  #        command: |
+ #           echo 'Hello World!'
+  #          echo 'This is the delivery pipeline'
