--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: sudo chmod 755 ./game/test.py test
+          command: sudo chmod 755 ./game/test.py
           name: Test
 
 workflows:
