--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: sudo chmod 755 ./tests/test.py
+          command: export PYTHONPATH=.; python ./tests/test.py
           name: Test
 
 workflows:
