--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: export PYTHONPATH=.; python ./tests/test.py
+          command: export PYTHONPATH=.; python -m unittest discover -s tests -t tests
           name: Test
 
 workflows:
