--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-flask-socketio
-flask
-gunicorn
-eventlet
+flask-socketio==4.3.1
+flask==1.1.2
+gunicorn==20.0.4
+eventlet==0.29.1
+python-engineio==3.13.2
+python-socketio==4.6.0
